--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ URI     : https://colorlib.com
                     <div class="d-flex flex-column flex-lg-row">
                         <img src="images/graphic.png" alt="graphic" class="img-fluid rounded align-self-start mr-lg-5 mb-5 mb-lg-0">
                         <div>
-                            <h2>Realtime tracking of your parcel</h2>
+                            <h2>Realtime tracking of your parcels</h2>
                             <!--<p class="lead">Uniquely underwhelm premium outsourcing with proactive leadership skills. </p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque pretium, nisi nisi fermentum enim, et sagittis dolor nulla vel sapien. Vestibulum sit amet mattis ante. Ut placerat dui eu nulla
                                 congue tincidunt ac a nibh. Mauris accumsan pulvinar lorem placerat volutpat. Praesent quis facilisis elit. Sed condimentum neque quis ex porttitor,
@@ -241,7 +241,7 @@ URI     : https://colorlib.com
                 <div class="tab-pane fade" id="livechat">
                     <div class="d-flex flex-column flex-lg-row">
                         <div>
-                            <h2>Live chat when you needed</h2>
+                            <h2>Live chat when you need it</h2>
                             <!--<p class="lead">Uniquely underwhelm premium outsourcing with proactive leadership skills. </p>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer rutrum, urna eu pellentesque pretium, nisi nisi fermentum enim, et sagittis dolor nulla vel sapien. Vestibulum sit amet mattis ante. Ut placerat dui eu nulla
                                 congue tincidunt ac a nibh. Mauris accumsan pulvinar lorem placerat volutpat. Praesent quis facilisis elit. Sed condimentum neque quis ex porttitor,
